# for_my_house

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  market.py
backend/app/schemas/: dashboard.py
backend/app/services/: demo_seed.py  molit_client.py  news_client.py  normalization.py  reporting.py  repositories.py
backend/app/workers/: scheduler.py
backend/tests/: test_normalization.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: KpiCard.tsx  ReportPanel.tsx
frontend/lib/: api.ts
